--- a/GB-exam/index.html
+++ b/GB-exam/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="scss/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Waxom</title>
 </head>
 <body>
@@ -344,8 +344,7 @@
             </div>
         </div>
         <div class="autor">
-            <span class="copyright autor-block">Copyright 	
-                    &#169; 2015 <span class="light">Waxom</span> </span>
+            <span class="copyright autor-block">Copyright &#169; 2015 <span class="light">Waxom</span> </span>
             <a href="#" class="privacy autor-block autor-link">Privacy Policy</a>
             <a href="#" class="faq autor-block autor-link">FAQ </a>
             <a href="#" class="support autor-block autor-link">Support</a>
