Приведение в порядок IE

--- a/cinema-expert/index.html
+++ b/cinema-expert/index.html
@@ -51,10 +51,10 @@
                 <div id="carousel" class="carousel article__carousel">
                     <img src="img/slider_0.png" alt="главное изображение" class="carousel__window">
                     <div class="carousel__img-row">
-                        <img src="img/slider_1.png" alt="" class="carousel__img">
-                        <img src="img/slider_2.png" alt="" class="carousel__img">
-                        <img src="img/slider_3.png" alt="" class="carousel__img">
-                        <img src="img/slider_4.png" alt="" class="carousel__img">
+                        <img src="img/slider_1.png" alt="Картинка 1" class="carousel__img">
+                        <img src="img/slider_2.png" alt="Картинка 2" class="carousel__img">
+                        <img src="img/slider_3.png" alt="Картинка 3" class="carousel__img">
+                        <img src="img/slider_4.png" alt="Картинка 4" class="carousel__img">
                     </div>
                 </div>
                 <p class="txt article__txt">
