--- a/cinema-expert/index.html
+++ b/cinema-expert/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/style.css">
     <title>Эксперт Кино</title>
-    <script src="/js/carousel.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/carousel.js"></script>
+    <script src="./js/main.js"></script>
 </head>
 <body>
     <div class="content content_color-line">
@@ -51,10 +51,10 @@
                 <div id="carousel" class="carousel article__carousel">
                     <img src="img/slider_0.png" alt="главное изображение" class="carousel__window">
                     <div class="carousel__img-row">
-                        <img src="img/slider_1.png" alt="Картинка 1" class="carousel__img">
-                        <img src="img/slider_2.png" alt="Картинка 2" class="carousel__img">
-                        <img src="img/slider_3.png" alt="Картинка 3" class="carousel__img">
-                        <img src="img/slider_4.png" alt="Картинка 4" class="carousel__img">
+                        <img src="img/slider_1.png" alt="Картинка 1" class="carousel__img" width="150" height="150">
+                        <img src="img/slider_2.png" alt="Картинка 2" class="carousel__img" width="150" height="150">
+                        <img src="img/slider_3.png" alt="Картинка 3" class="carousel__img" width="150" height="150">
+                        <img src="img/slider_4.png" alt="Картинка 4" class="carousel__img" width="137" height="150">
                     </div>
                 </div>
                 <p class="txt article__txt">
