--- a/cinema-expert/index.html
+++ b/cinema-expert/index.html
@@ -24,6 +24,13 @@
                 <a href="#" class="social-links__link social-links__link_tw"></a>
             </div>
             
+            <input id="checkbox" type="checkbox"  class="nav__checkbox">
+            <label for="checkbox" class="nav__btn">
+                <div class="nav__icon">
+                </div>
+            </label>
+
+
             <nav class="nav header__nav">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#" class="nav__link">Главная</a></li>
@@ -170,7 +177,7 @@
                         <img src="img/liked_photo.png" alt="Фото двух мужчин" class="shot-block__img" width="73" height="73">
                         <div class="shot-block__content">
                             <p class="shot-block__txt">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#" class="shot-block__link">Medication »</a>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#" class="shot-block__link">Medication</a>
                             </p>
                         </div>
                     </section>
@@ -178,7 +185,7 @@
                         <img src="img/liked_photo.png" alt="Фото двух мужчин" class="shot-block__img" width="73" height="73">
                         <div class="shot-block__content">
                             <p class="shot-block__txt">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#" class="shot-block__link">Medication »</a>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#" class="shot-block__link">Medication</a>
                             </p>
                         </div>
                     </section>
@@ -186,7 +193,7 @@
                         <img src="img/liked_photo.png" alt="Фото двух мужчин" class="shot-block__img" width="73" height="73">
                         <div class="shot-block__content">
                             <p class="shot-block__txt">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#" class="shot-block__link">Medication »</a>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#" class="shot-block__link">Medication</a>
                             </p>
                         </div>
                     </section>
@@ -194,7 +201,7 @@
                         <img src="img/liked_photo.png" alt="Фото двух мужчин" class="shot-block__img" width="73" height="73">
                         <div class="shot-block__content">
                             <p class="shot-block__txt">
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#" class="shot-block__link">Medication »</a>
+                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#" class="shot-block__link">Medication</a>
                             </p>
                         </div>
                     </section>
