Четыре новых карточки

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <div class="container">
   
         <div class="row">
+          
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
               <img class="bd-placeholder-img card-img-top" src="./img/gb-exam-large-30.jpg" width="100%" height="225">
@@ -46,6 +47,43 @@
               </div>
             </div>
           </div>
+
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="bd-placeholder-img card-img-top" src="./img/cinema-expert-14.jpg" width="100%" height="225">
+              <div class="card-body">
+                <p class="card-text">Тестовое задание. Страничка сайта обзоров по фильмам.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <a href="./projects/cinema-expert/" class="btn btn-sm btn-outline-secondary">Смотреть</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="bd-placeholder-img card-img-top" src="./img/galaxy-23.jpg" width="100%" height="225">
+              <div class="card-body">
+                <p class="card-text">Тестовое задание. Сайт с информацией о людях. Двойное меню, правый блок сделан по типу "аккордеона" </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <a href="./projects/galaxy/" class="btn btn-sm btn-outline-secondary">Смотреть</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="bd-placeholder-img card-img-top" src="./img/banda-umnikov-14.jpg" width="100%" height="225">
+              <div class="card-body">
+                <p class="card-text">Тестовое задание. Два рекламных блока, рассказывающих об акциях.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <a href="./projects/bandaumnikov/" class="btn btn-sm btn-outline-secondary">Смотреть</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
