Ссылки на github

--- a/index.html
+++ b/index.html
@@ -42,7 +42,25 @@
               <div class="card-body">
                 <p class="card-text">Выпускной проект учебного курса HTML5/CSS3 на порталле GeekBrains </p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="./projects/GB-exam/" class="btn btn-sm btn-outline-secondary">Смотреть</a>
+                  <div class="btn-group">
+                    <a href="./projects/GB-exam/" class="btn btn-sm btn-outline-primary">Смотреть</a>
+                    <a href="https://github.com/senseytreyser/HTML5-exam" class="btn btn-sm btn-outline-primary">GitHub</a>
+                  </div>  
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <img class="bd-placeholder-img card-img-top" src="./img/sem-rush-filter.jpg" width="100%" height="225">
+              <div class="card-body">
+                <p class="card-text">Тестовое задание. Фильтр с возможностью добавления и удаления строк. При нажатии Apply информация из фильтра выводится в консоль.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <a href="./projects/SEM-rush-filter/" class="btn btn-sm btn-outline-primary">Смотреть</a>
+                    <a href="https://github.com/senseytreyser/SEMrush-filter" class="btn btn-sm btn-outline-primary">GitHub</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -54,7 +72,10 @@
               <div class="card-body">
                 <p class="card-text">Тестовое задание. Страничка сайта обзоров по фильмам.</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="./projects/cinema-expert/" class="btn btn-sm btn-outline-secondary">Смотреть</a>
+                  <div class="btn-group">
+                    <a href="./projects/cinema-expert/" class="btn btn-sm btn-outline-primary">Смотреть</a>
+                    <a href="https://github.com/senseytreyser/senseytreyser.github.io/tree/master/projects/cinema-expert" class="btn btn-sm btn-outline-primary">GitHub</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -66,7 +87,10 @@
               <div class="card-body">
                 <p class="card-text">Тестовое задание. Сайт с информацией о людях. Двойное меню, правый блок сделан по типу "аккордеона" </p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="./projects/galaxy/" class="btn btn-sm btn-outline-secondary">Смотреть</a>
+                  <div class="btn-group">
+                    <a href="./projects/galaxy/" class="btn btn-sm btn-outline-primary">Смотреть</a>
+                    <a href="https://github.com/senseytreyser/galaxy" class="btn btn-sm btn-outline-primary">GitHub</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -78,7 +102,10 @@
               <div class="card-body">
                 <p class="card-text">Тестовое задание. Два рекламных блока, рассказывающих об акциях.</p>
                 <div class="d-flex justify-content-between align-items-center">
-                  <a href="./projects/bandaumnikov/" class="btn btn-sm btn-outline-secondary">Смотреть</a>
+                  <div class="btn-group">
+                    <a href="./projects/bandaumnikov/" class="btn btn-sm btn-outline-primary">Смотреть</a>
+                    <a href="https://github.com/senseytreyser/senseytreyser.github.io/tree/master/projects/bandaumnikov" class="btn btn-sm btn-outline-primary">GitHub</a>
+                  </div>
                 </div>
               </div>
             </div>
